--- a/css/src/normalize.css
+++ b/css/src/normalize.css
@@ -76,15 +76,17 @@
   }
 
   :where(summary) {
+    display: flex;
+    text-align: inherit;
+
     &::marker {
       content: none;
     }
 
-    display: flex;
-
     & > span {
       flex: 1 1;
       overflow: clip;
+      text-align: inherit;
       text-overflow: ellipsis;
       white-space: nowrap;
     }
@@ -269,6 +271,7 @@
     height: max-content;
     outline: solid 1px transparent;
     outline-offset: 1px;
+    text-align: inherit;
     text-decoration: underline;
     text-decoration-skip-ink: auto;
     transition-property: color;
@@ -309,6 +312,7 @@
     & > span {
       flex: 1 1;
       overflow: clip;
+      text-align: inherit;
       text-overflow: ellipsis;
       white-space: nowrap;
     }
@@ -327,6 +331,7 @@
     outline-offset: -2px;
     overflow: clip;
     padding: 0 var(--md);
+    text-align: inherit;
     transition-property: background-color, color, filter, outline, outline-color, outline-offset;
     transition-duration: var(--animDuration);
     transition-timing-function: var(--animTiming);
@@ -357,10 +362,10 @@
       aspect-ratio: 1/1;
       display: grid;
       flex-shrink: 0;
-      height: auto;
+      height: 45px;
       padding: 0;
       place-content: center;
-      width: min(100%, 45px);
+      width: 45px;
     }
 
     &:where([data-variant="outline"]) {
@@ -377,6 +382,7 @@
     & > span {
       flex: 1 1;
       overflow: clip;
+      text-align: inherit;
       text-overflow: ellipsis;
       white-space: nowrap;
     }
